# mini-java-compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
ast_components/: CMakeLists.txt  ast_components.hh  ast_forward_declaration.hh  class_declaration.hh  declaration.hh  expression.hh  expression_base.hh  i_node.hh  invocation.hh  lvalue.hh  method_declaration.hh  program.hh  statement.hh  variable_declaration.hh
ast_components/declarations/: class_declaration.hh  class_member_declaration.hh  declarations.hh  method_declaration.hh  variable.hh  variable_declaration.hh
ast_components/expressions/: binary_expressions.hh  expression_base.hh  expressions.hh
ast_components/statements/: statements.hh
ast_components/types/: type.hh
driver/: CMakeLists.txt  driver.cpp  driver.hh  parser.y  scanner.hh  scanner.l
grammar/: .gitignore  CMakeLists.txt  parser.y  scanner.h  scanner.l
ir_builder/: CMakeLists.txt  base_builder.hh  class_declaration_builder.hh  class_realization_builder.hh  function_declaration_builder.hh  function_realization_builder.hh  program_builder.hh  type_resolver.hh  value.hh  value_builder.hh
jit/: CMakeLists.txt  jit_compile.hh  jit_run.hh
scope_table/: CMakeLists.txt  scope.hh  scope_table.hh
symbol_table/: CMakeLists.txt  symbol.hh  symbol_table.hh
tests/: CMakeLists.txt  test_interpreter.cpp  test_ir_builder.cpp  test_jit_compiler.cpp  test_main.cpp  test_parser.cpp  test_print_visitor.cpp  test_scopes.cpp  test_symbol_table.cpp  test_symbol_table_builder.cpp  test_types.cpp  test_utils.hh
tests/compiler_tests/: arrays.java  assertion_arithmetic.java  assertion_false.java  assertion_true.java  classes.java  empty.java  fibonacci.java  primary_numbers.java  shadowing.java  time_limit.java
tests/interpreter_tests/: assertion_works.java  factorize.java  stdout.java
tests/ir_builder_tests/: assertion.java  assertion.ll
tests/parse_tests/: arithmetic.yaml  comments.java  if-else.yaml  return_lvalue.yaml  sample.java  sample.yaml
tests/print_visitor_tests/: arithmetic.java  arithmetic.yaml  if-else.java  if-else.yaml  return_lvalue.java  return_lvalue.yaml  sample.java  sample.yaml
tests/symbol_table_tests/: cyclic.java
types/: CMakeLists.txt  class_specification.hh  i_type.hh  method_scpecification.hh  types.hh  types_utils.hh  variable_specification.hh
visitors/: CMakeLists.txt  i_visitor.hh  naive_interpreter.hh  partial_visitor.hh  symbol_table_builder.hh  template_visitor.hh  yaml_visitor.hh
